--- a/control/autoware_mpc_lateral_controller/package.xml
+++ b/control/autoware_mpc_lateral_controller/package.xml
@@ -20,6 +20,7 @@
   <depend>autoware_control_msgs</depend>
   <depend>autoware_motion_utils</depend>
   <depend>autoware_planning_msgs</depend>
+  <depend>autoware_planning_test_manager</depend>
   <depend>autoware_test_utils</depend>
   <depend>autoware_trajectory_follower_base</depend>
   <depend>autoware_universe_utils</depend>
