--- a/control/autoware_mpc_lateral_controller/package.xml
+++ b/control/autoware_mpc_lateral_controller/package.xml
@@ -38,6 +38,7 @@
   <depend>std_msgs</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
+  <depend>tier4_control_msgs</depend>
   <depend>tier4_debug_msgs</depend>
 
   <test_depend>ament_cmake_ros</test_depend>
