--- a/perception/autoware_simple_object_merger/package.xml
+++ b/perception/autoware_simple_object_merger/package.xml
@@ -14,6 +14,7 @@
 
   <depend>autoware_perception_msgs</depend>
   <depend>autoware_universe_utils</depend>
+    <depend>autoware_test_utils</depend>
   <depend>geometry_msgs</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
