--- a/perception/autoware_simple_object_merger/package.xml
+++ b/perception/autoware_simple_object_merger/package.xml
@@ -14,14 +14,15 @@
 
   <depend>autoware_perception_msgs</depend>
   <depend>autoware_universe_utils</depend>
-    <depend>autoware_test_utils</depend>
   <depend>geometry_msgs</depend>
   <depend>rclcpp</depend>
   <depend>rclcpp_components</depend>
+  <depend>tf2_geometry_msgs</depend>
 
   <build_depend>autoware_cmake</build_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>autoware_lint_common</test_depend>
+  <test_depend>autoware_test_utils</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
